--- a/assets/css/template.css
+++ b/assets/css/template.css
@@ -3,126 +3,110 @@
 #menu {
     display: none;
   }
+  .fas{
+    margin: 0px 4px;
+  }
   
   
   .icoMenu{
     display: none!important;
   }
   
-  
+  .navbar-horizontal{
+    display: flex;
+    align-items: center;
+    background: #343a40;
+    width: 100%;
+    height: 60px;
+  }
+
+  .navbar-horizontal__logo > img{
+
+    width: 200px;
+    height: 60px;
+  }
+
+  .navbar-horizontal_ul{
+    display: flex;
+    list-style: none;
+    margin-top: auto;
+    margin-bottom: auto;
+
+  }
+
+  .navbar-horizontal_li{
+    color: #fff;
+    margin: 0px 4px;
+    text-decoration: none!important;
+
+  }
+
+  .navbar-horizontal_li > a{
+    padding: 6px 8px;
+    text-decoration: none;
+    color: #fff;
+    /* border: 1px solid #fff;  */
+    border-radius: 20px;
+    font-size: 15px;
+  }
+
+  /* .navbar-horizontal_li > a:hover{
+    background-color: #dc0d0d;
+  } */
+
+  .linea_oscura{
+    display: none;
+    background-color: black;
+
+  }
+
+  .linea_blanca{
+    display: none;
+    background-color: white;
+
+  }
+
   .sidenav {
-      height: 100%; /* Full-height: remove this if you want "auto" height */
-      width: 185px; /* Set the width of the sidebar */
-      position: fixed; /* Fixed Sidebar (stay in place on scroll) */
-      z-index: 1; /* Stay on top */
-      top: 0; /*Stay at the top */
-      left: 0;
-      background-color: #111; /* Black */
-      overflow-x: hidden; /* Disable horizontal scroll */
-      padding-top: 20px;
-      font-family: "Lato", sans-serif;
+    height: 100vh; /* Full-height: remove this if you want "auto" height */
+    width: 100%; /* Set the width of the sidebar */
+      position: absolute; 
+    top: 0; /*Stay at the top */
+    left: 0;
+    background-color: #343a40;
+    overflow-x: hidden; /* Disable horizontal scroll */
+    font-family: "Lato", sans-serif;
     }
     
-    /* The navigation menu links */
-   
-    .sidenav a {
+    .sidenav__ul{
+      padding: 0px;
+
+    }
+    .sidenav__ul a {
       padding: 6px 8px 6px 16px;
       text-decoration: none;
       font-size: 15px;
-      color: #818181;
+      color: #fff;
       display: block;
     }
+/* ------------------------------------------- */
+
     
-    /* When you mouse over the navigation links, change their color */
+
+    .user{
+      display: none;
+    }
+    
     .sidenav a:hover {
-      color: #f1f1f1;
+      color: #b35555;
     }
-  
-    @media (min-width: 451px) and (max-width: 770px){
-      #menu{
-        display: block;
-      }
-      .d-none{
-        display: block!important;
-      }
-      .icoMenu{
-        display: flex!important;
-        justify-content: flex-end!important;
-        padding-right: 12px!important;
-      }
-      .menuTitle{
-        font-size: 16px;
-      }
-      
-  
-      .sidenav{
-        display: none;
-        height: auto; /* Full-height: remove this if you want "auto" height */
-        width: 100%; /* Set the width of the sidebar */
-        position: fixed; /*Fixed Sidebar (stay in place on scroll) */
-        /* z-index: 1; Stay on top */
-        top: 0; /*Stay at the top */
-        /* left: 0; */
-        background-color: #111; /* Black */
-        /* overflow-x: hidden; Disable horizontal scroll */
-        padding-top: 5px;
-        font-family: "Lato", sans-serif;
-      }
-  
-  
-      #clientesContainer{
-        overflow-x: scroll;
-      }
-    }
-    
-    
-    /* On smaller screens, where height is less than 450px, change the style of the sidebar (less padding and a smaller font size) */
-    @media (max-width: 450px) {
-      #menu{
-        display: block;
-      }
-      .d-none{
-        display: block!important;
-      }
-      .icoMenu{
-        display: flex!important;
-        justify-content: flex-end!important;
-        padding-right: 12px!important;
-      }
-      .menuTitle{
-        font-size: 16px;
-      }
-      
-  
-      .sidenav{
-        display: none;
-        height: auto; /* Full-height: remove this if you want "auto" height */
-        width: 100%; /* Set the width of the sidebar */
-        position: fixed; /*Fixed Sidebar (stay in place on scroll) */
-        /* z-index: 1; Stay on top */
-        top: 0; /*Stay at the top */
-        /* left: 0; */
-        background-color: #111; /* Black */
-        /* overflow-x: hidden; Disable horizontal scroll */
-        padding-top: 5px;
-        font-family: "Lato", sans-serif;
-      }
-  
-  
-      #clientesContainer{
-        overflow-x: scroll;
-      }
-  
-    }
-  
-    /* +++++++++++++++++++++++++++++++++++++++++++++++++++++ */
-  
-  a.selected{
-      color: white;
+
+
+    a.selected{
+      color: #dc0d0d;
   }
     
   .selected{
-    border-bottom: #f1f1f1 3px solid;
+    border-bottom: #dc0d0d 3px solid;
   }
   
   .centrado {
@@ -151,4 +135,103 @@
   .small-font-label{
     font-size: 0.4em;
   }
+  .search>i{
+    display: none;
+  }
+  .add>i{
+    display: none;  
+    color: white;
+  }
+
+
+    /* On smaller screens, where height is less than 450px, change the style of the sidebar (less padding and a smaller font size) */
+    @media (max-width: 450px) {
+      #menu{
+        display: block;
+      }
+
+      #user__nav_horizontal{
+        display:none;
+      }
   
+      #menuico{
+        display: block;
+      }
+
+      .icoMenu{
+        display: flex!important;
+        justify-content: flex-end!important;
+        padding-right: 12px!important;
+      }
+  
+      .sidenav{
+        padding: 0%;
+        display: none; 
+        height: auto; /* Full-height: remove this if you want "auto" height */
+        width: 100%; /* Set the width of the sidebar */
+        padding-top: 5px;
+        background-color: #343a40;
+        font-family: "Lato", sans-serif;
+        position: relative;
+      }
+
+      .search>i{
+        display: block;
+        text-align: center;
+      }
+
+      .add>i{
+        display: block;
+      }
+
+
+      .search>p{
+      display: none;
+
+      }
+      .add>p{
+        display: none;
+
+      }
+
+
+    }
+  
+    /* +++++++++++++++++++++++++++++++++++++++++++++++++++++ */
+  
+
+
+    @media (min-width: 451px) and (max-width: 768px){
+
+      #user__nav_horizontal{
+        display:none;
+      }
+  
+      .sidenav{
+        padding: 0%;
+        display: none; 
+        height: auto; /* Full-height: remove this if you want "auto" height */
+        width: 100%; /* Set the width of the sidebar */
+        padding-top: 5px;
+        background-color: #343a40;
+        font-family: "Lato", sans-serif;
+        position: relative;
+      }
+
+      #menu{
+        display: block;
+      }
+ 
+    }
+
+  
+  
+  
+
+
+  /* ----------------------------- Carousel-------------------------- */
+
+
+  .img-carousel{
+    max-height: 70vh !important;
+  }
