--- a/assets/css/template.css
+++ b/assets/css/template.css
@@ -1,5 +1,6 @@
 /* The sidebar menu */
 
+
 #menu {
     display: none;
   }
@@ -13,19 +14,21 @@
   }
   
   .navbar-horizontal{
+    
     display: flex;
     align-items: center;
-    background: #343a40;
+    background: #2B3643;
     width: 100%;
     height: 60px;
+    position: relative;
   }
 
   .navbar-horizontal__logo > img{
 
-    width: 200px;
+    width: 150px;
     height: 60px;
   }
-
+ 
   .navbar-horizontal_ul{
     display: flex;
     list-style: none;
@@ -69,12 +72,14 @@
   .sidenav {
     height: 100vh; /* Full-height: remove this if you want "auto" height */
     width: 100%; /* Set the width of the sidebar */
-      position: absolute; 
-    top: 0; /*Stay at the top */
+    /* max-width: 16.666667%; Set the width of the sidebar */
+    position: absolute; 
+    /* top: 60px; Stay at the top */
     left: 0;
-    background-color: #343a40;
+    background-color: #2B3643;
     overflow-x: hidden; /* Disable horizontal scroll */
     font-family: "Lato", sans-serif;
+
     }
     
     .sidenav__ul{
@@ -87,6 +92,10 @@
       font-size: 15px;
       color: #fff;
       display: block;
+    }
+
+    .table-responsive-md{
+      overflow-x: auto;
     }
 /* ------------------------------------------- */
 
@@ -192,6 +201,10 @@
       .add>p{
         display: none;
 
+      }
+
+      .user{
+        display: block;
       }
 
 
