--- a/assets/css/template.css
+++ b/assets/css/template.css
@@ -1,6 +1,12 @@
 /* The sidebar menu */
 
+.container{
+  margin-top: 60px;
+}
 
+input{
+  text-transform: uppercase;
+}
 #menu {
     display: none;
   }
@@ -20,7 +26,8 @@
     background: #2B3643;
     width: 100%;
     height: 60px;
-    position: relative;
+    position: fixed; 
+    z-index: 100;
   }
 
   .navbar-horizontal__logo > img{
@@ -72,9 +79,9 @@
   .sidenav {
     height: 100vh; /* Full-height: remove this if you want "auto" height */
     width: 100%; /* Set the width of the sidebar */
-    /* max-width: 16.666667%; Set the width of the sidebar */
-    position: absolute; 
-    /* top: 60px; Stay at the top */
+     max-width: 16.666667%; 
+    position: fixed; 
+    top: 60px; 
     left: 0;
     background-color: #2B3643;
     overflow-x: hidden; /* Disable horizontal scroll */
@@ -151,6 +158,23 @@
     display: none;  
     color: white;
   }
+  a > p{
+    display: flex;
+    margin-bottom: 0px!important;
+  }
+
+  .no-data{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+  }
+
+  .no-data__image{
+    width: 55%;
+    height: 70vh;
+  }
+
 
 
     /* On smaller screens, where height is less than 450px, change the style of the sidebar (less padding and a smaller font size) */
@@ -187,6 +211,10 @@
       .search>i{
         display: block;
         text-align: center;
+      }
+
+      .x{
+        display: none;
       }
 
       .add>i{
@@ -237,6 +265,20 @@
  
     }
 
+  @media (min-width: 1200px){
+    .sidenav {
+      height: 100vh; /* Full-height: remove this if you want "auto" height */
+      width: 100%; /* Set the width of the sidebar */
+      max-width: 10.3333333%; 
+      position: fixed; 
+      top: 60px; 
+      left: 0;
+      background-color: #2B3643;
+      overflow-x: hidden; /* Disable horizontal scroll */
+      font-family: "Lato", sans-serif;
+      }
+
+  }
   
   
   
