--- a/assets/css/template.css
+++ b/assets/css/template.css
@@ -288,8 +288,8 @@ a > p{
 }
   
   
-  
-
+  /* ---------------------- VENTAS --------------------------- */
+ 
 
   /* ----------------------------- Carousel-------------------------- */
 
